[package]
name = "graffiti"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = "1.0.219"
tokio = { version = "1.47.1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tungstenite = { version = "0.27.0", features = ["native-tls"] }
url = { version = "2.5.7", features = ["serde"] }
