[package]
name = "graffiti"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.47", features = ["derive", "string"] }
confy = "1.0.0"
directories = "6.0.0"
serde = "1.0.219"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
tungstenite = { version = "0.27.0", features = ["native-tls"] }
url = { version = "2.5.7", features = ["serde"] }
